lab2(+Fixes)